test/valid/41625_IntegerTree/IntegerTree.plume
/**
* Integer binary tree. 
* @author fc41625@alunos.fc.ul.pt Fabio Botelho 
* @version $id$ 
*/

abstract class IntegerTree extends Object is 
	 abstract method insert : (elem : Integer) -> IntegerTree 
	 abstract method isEmpty : () -> Boolean 
	 abstract method count : () ->  Integer
	 abstract method contains : (elem : Integer)  -> Boolean 
	 abstract method weight : () -> Integer 
	 abstract method sum : () -> Integer 
	 