test/invalid/InvalidSyntax/InvalidSyntax.plume
/**
 * Invalid Syntax declared field inside method 
 * Compiles into error.
 *
 * @author fc41625@alunos.fc.ul.pt F‡bio Botelho 
 * @version $id$ 
 *
 */
 
 class InvalidSyntax extends Object is
	 method foo : () -> Boolean is 
	 	 field f : Boolean
	